// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RecentSearches stories snapshot > Default story renders and matches snapshot 1`] = `
<div>
  <div
    class="p-6"
  >
    <div>
      <div
        class="text-sm font-semibold text-foreground mb-2"
      >
        Recent Searches
      </div>
      <div
        class="-mx-6"
      >
        <button
          class="w-full text-left px-12 py-2 hover:bg-accent text-base font-normal"
          type="button"
        >
          shoes
        </button>
        <button
          class="w-full text-left px-12 py-2 hover:bg-accent text-base font-normal"
          type="button"
        >
          boots
        </button>
        <button
          class="w-full text-left px-12 py-2 hover:bg-accent text-base font-normal"
          type="button"
        >
          sneakers
        </button>
        <button
          class="w-full text-left px-12 py-2 hover:bg-accent text-primary text-base font-normal"
          type="button"
        >
          Clear recent searches
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`RecentSearches stories snapshot > Empty story renders and matches snapshot 1`] = `
<div>
  <div
    class="p-6"
  />
</div>
`;

exports[`RecentSearches stories snapshot > ManySearches story renders and matches snapshot 1`] = `
<div>
  <div
    class="p-6"
  >
    <div>
      <div
        class="text-sm font-semibold text-foreground mb-2"
      >
        Recent Searches
      </div>
      <div
        class="-mx-6"
      >
        <button
          class="w-full text-left px-12 py-2 hover:bg-accent text-base font-normal"
          type="button"
        >
          shoes
        </button>
        <button
          class="w-full text-left px-12 py-2 hover:bg-accent text-base font-normal"
          type="button"
        >
          boots
        </button>
        <button
          class="w-full text-left px-12 py-2 hover:bg-accent text-base font-normal"
          type="button"
        >
          sneakers
        </button>
        <button
          class="w-full text-left px-12 py-2 hover:bg-accent text-base font-normal"
          type="button"
        >
          sandals
        </button>
        <button
          class="w-full text-left px-12 py-2 hover:bg-accent text-base font-normal"
          type="button"
        >
          flip flops
        </button>
        <button
          class="w-full text-left px-12 py-2 hover:bg-accent text-base font-normal"
          type="button"
        >
          running shoes
        </button>
        <button
          class="w-full text-left px-12 py-2 hover:bg-accent text-base font-normal"
          type="button"
        >
          hiking boots
        </button>
        <button
          class="w-full text-left px-12 py-2 hover:bg-accent text-base font-normal"
          type="button"
        >
          dress shoes
        </button>
        <button
          class="w-full text-left px-12 py-2 hover:bg-accent text-primary text-base font-normal"
          type="button"
        >
          Clear recent searches
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`RecentSearches stories snapshot > SingleSearch story renders and matches snapshot 1`] = `
<div>
  <div
    class="p-6"
  >
    <div>
      <div
        class="text-sm font-semibold text-foreground mb-2"
      >
        Recent Searches
      </div>
      <div
        class="-mx-6"
      >
        <button
          class="w-full text-left px-12 py-2 hover:bg-accent text-base font-normal"
          type="button"
        >
          laptop
        </button>
        <button
          class="w-full text-left px-12 py-2 hover:bg-accent text-primary text-base font-normal"
          type="button"
        >
          Clear recent searches
        </button>
      </div>
    </div>
  </div>
</div>
`;
